# testcode

./: .gitignore
cpp/cmdopt/: cmdopt.cpp
cpp/co_gemini/: Makefile  README.md  co_copy.cpp  co_copy_sqpoll.cpp  l-3.cpp  l-7.cpp  make.sh
cpp/co_gpt/: co_copy.cpp  co_nvme.cpp
cpp/coroutine/: coroutine.cpp
cpp/fdp/: c_cpp_properties.json  clean.sh  launch.json  meson.build  readme.md
cpp/fdp-copy/: Makefile  README.md  fdp_copy.c  fdp_copy_super_benchmark.c  fdp_copy_super_benchmark_libnvme_allin.c
cpp/fdpcopy/: Makefile  README.md  fdpcopy.c  fdpcopy_stress.c  thread.c  uring.c
cpp/fdpcp/: Makefile  README.md  fdp_copy.c  fdp_copy_benchmark_tool.c  fdp_copy_super_benchmark_libnvme.c  fdp_copy_super_benchmark_tool.c  fdp_copy_super_benchmark_tool2.c  fdp_stress_tool.c
cpp/filter/: CMakeLists.txt
cpp/logger/: Makefile  argparser.cpp  argparser.hpp  logger.cpp  logger.hpp  test.cpp
powershell/: README.md  calc.ps1  calculator.ps1  smart.ps1  smart.xlsx  smart_management.csv  uiautomation.ps1  uiautomation2.ps1  uiautomation3.ps1  uitest.ps1  usbctrl.ps1
python/: backup_restore.py  command_runner.py  disk_manager.py  diskm.py  dm-cli.py  dm-test.py  filesys.py  img-tools.py  natsclient.py  qemu.py  qparse.py  smart.py  test_filesys.py
python/qemu_launcher/: README.md  __init__.py  config.py  core.py  logger.py  main.py  pyproject.toml  setup.py  shell.py
python/qemu_launcher/device/: cdrom.py  connect.py  disk_image.py  disks.py  kernel.py  machine.py  net.py  nvme.py  pci.py  spice.py  ssh.py  tpm.py  uefi.py  usb.py  usb_storage.py  virtiofs.py
(+32 files in other folders)
